# RumexLeaves-CenterNet

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
dockerfiles/: train_model.dockerfile
exp_files/: train_final_model.py
rumexleaves_centernet/config/: __init__.py  base_exp.py  build.py  center_leaf_base_exp.py
rumexleaves_centernet/core/: evaluator.py  trainer.py
rumexleaves_centernet/data/: __init__.py  data_augment.py  make_dataset.py
rumexleaves_centernet/data/dataset/: __init__.py  rumex_leaves.py  target_reformulate.py
rumexleaves_centernet/evaluation/: __init__.py  projected_oks.py  voc_obb_map.py
rumexleaves_centernet/models/: bb_model.py  dcn_resnet.py  dcn_v2.py  losses.py
rumexleaves_centernet/tools/: evaluate.py  inference.py  train.py
rumexleaves_centernet/utils/: __init__.py  decode.py  image_drawer.py  logger_utils.py  lr_scheduler.py  model_utils.py  stats.py  utils.py
rumexleaves_centernet/visualizations/: visualize_data.py
submodules/Annotation-Converter/: .gitignore  rumex_weeds_example_usage.py  setup.py
submodules/Annotation-Converter/annotation_converter/: Annotation.py  AnnotationConverter.py  AnnotationConverterTT.py  BoundingBox.py  Ellipse.py  Polygon.py  Polyline.py
tests/test_integration/: test_1_batch_training.py  test_sample_evaluation.py
tests/test_integration/exp_files/: 1_batch_inat.txt  eval_inat.py  eval_roborumex.py  train_1_batch_360_tlbr_segment_3.py  train_1_batch_sincos_tlbr_point_3.py  (+4 more)
